// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockStore add pending redirection change state correctly 1`] = `
Object {
  "checkPinStatus": "CHECK_PIN_IDLE",
  "isAppLocked": true,
  "isLockEnabled": false,
  "pendingRedirection": Array [
    Object {
      "routeName": "home",
    },
  ],
}
`;

exports[`LockStore clear pending redirect if clear action is raised 1`] = `
Object {
  "checkPinStatus": "CHECK_PIN_IDLE",
  "isAppLocked": true,
  "isLockEnabled": false,
  "pendingRedirection": null,
}
`;

exports[`LockStore should set checkPinStatus to idle 1`] = `
Object {
  "checkPinStatus": "CHECK_PIN_FAIL",
  "isAppLocked": true,
  "isLockEnabled": false,
  "pendingRedirection": null,
}
`;

exports[`LockStore should set checkPinStatus to idle 2`] = `
Object {
  "checkPinStatus": "CHECK_PIN_IDLE",
  "isAppLocked": true,
  "isLockEnabled": false,
  "pendingRedirection": null,
}
`;
